[metadata]
name = tettigoniidae
version = 0.0.0
author = Project 8
author_email = project8xperiment@gmail.com
description = A C++/python based test repository for data analysis.
long_description = file: README.md 
url = https://github.com/project8/tettigoniidae
classifiers = 
    License :: Other/Proprietary License
    Operating System :: MacOS
    Operating System :: Unix
    Programming Language :: C++
    Programming Language :: Python

[options]
zip_safe = False
python_requires = >=3.6

[options.packages.find]
